the correction is added

--- a/company.html
+++ b/company.html
@@ -41,7 +41,7 @@
 </div>
 <div class="about">
     <h1 style="text-align:center;margin-top: 30px;">About Us</h1>
-    <p style="margin-top: 20px;">We focus on designing, producing, and selling a variety of T-shirts to cater to different tastes and preferences. These companies often offer custom designs, allowing customers to personalize their T-shirts with unique graphics, logos, or text. They use high-quality materials to ensure comfort and durability, and employ various printing techniques such as screen printing and digital printing to achieve vibrant and long-lasting designs. Many T-shirt companies also focus on sustainability, using eco-friendly fabrics and ethical manufacturing practices. Whether for casual wear, promotional events, or team uniforms, T-shirt companies provide versatile and stylish options for everyone.</p>
+    <p style="margin-top: 20px;">We focus on designing, producing,selling a variety of T-shirts to cater to different tastes and preferences. These companies often offer custom designs, allowing customers to personalize their T-shirts with unique graphics, logos, or text. They use high-quality materials to ensure comfort and durability, and employ various printing techniques such as screen printing and digital printing to achieve vibrant and long-lasting designs. Many T-shirt companies also focus on sustainability, using eco-friendly fabrics and ethical manufacturing practices. Whether for casual wear, promotional events, or team uniforms, T-shirt companies provide versatile and stylish options for everyone.</p>
 </div>
 <div class="contact" >
     <h1 >Contact</h1>
